# RoRust2.0

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  justfile
.cargo/: config.toml
.devcontainer/: devcontainer.json  entrypoint.sh
Config/: settings.ini
init/: init-rabbitmq.sh
migrations/2024-10-21-150702_create_users/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  schema.rs  server.rs
src/db/: mod.rs
src/game/: game_types.rs  mod.rs  player.rs  room.rs
src/game/poker/: game.rs  mod.rs
src/game/roulette/: game.rs  mod.rs
src/message/: mod.rs
src/queues/: db_queue.rs  mod.bk.rs  mod.rs
src/server/: mod.rs
src/utils/: logger.rs
