[package]
name = "ro-rust-v2"
version = "0.1.0"
edition = "2021"
description = "A basic implementation of a gambling game and game server in Rust"

[dependencies]
anyhow = "1.0.90"
async-trait = "0.1.83"
configparser = "3.1.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tokio-util = { version = "0.7.12", features = ["codec"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.0"


[features]
unit = []
integration = []
full = ["unit", "integration"]
