[package]
name = "ro-rust-v2"
version = "0.1.0"
edition = "2021"
description = "A basic implementation of a gambling game and game server in Rust"

[dependencies]
anyhow = "1.0.90"
async-trait = "0.1.83"
configparser = "3.1.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"
tokio = { version = "1.41.0", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = "0.24.0"
tokio-util = { version = "0.7.12", features = ["codec"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
diesel = { version = "2.2.4", features = [
	"postgres",
	"r2d2",
	"chrono",
	"serde_json",
] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
rust_decimal = "1.36.0"
diesel-derive-newtype = "2.1.0"
argon2 = "0.5"
jsonwebtoken = "9.1"
thiserror = "1.0.65"
lapin = "2.3.1"
tokio-amqp = "2.0.0"
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dev-dependencies]
pretty_assertions = "1.4.0"
diesel_cli = { version = "2.2.4", features = ["postgres"] }


[profile.dev]
opt-level = 3
debug = true

[features]
unit = []
integration = []
full = ["unit", "integration"]
